<resources>
    <string name="app_name">SeCoCo</string>
    <!-- Etiquetas para Ingreso -->
    <string name="main_txt_usuario_hint">Ingrese su Usuario</string>
    <string name="main_txt_contrasena_hint">Ingrese su Contraseña</string>
    <string name="main_txt_bienvenido">Bienvenido a SeCoCo</string>
    <string name="main_btn_login">Ingresar</string>
    <string name="main_lbl_registro"><u>Registro</u></string>
    <string name="main_lbl_cambio_contrasena"><u>Cambiar Contraseña</u></string>

    <!-- Etiquetas para CambioContraseña-->
    <string name="cambioContrasena_lbl_titulo">Cambio de Contraseña</string>
    <string name="cambioContrasena_hint_nueva_contrasena">Ingrese su nueva Contraseña</string>
    <string name="cambioContrasena_hint_nueva_confirmar_contrasena">Confirmar nueva Contraseña</string>
    <string name="cambioContrasena_btn_cambiar_contrasena">Cambiar Contraseña</string>

    <!-- Etiquetas para Registro -->
    <string name="registro_lbl_registrate">Regístrate</string>
    <string name="registro_txt_nombre">Nombre</string>
    <string name="registro_txt_apellido">Apellido</string>
    <string name="registro_txt_email_hint">Ingrese su e-mail</string>
    <string-array name="Cedula">
        <item>C.C.</item>
        <item>C.E.</item>
        <item>T.I.</item>
        <item>R.C.</item>
    </string-array>

    <string name="registro_txt_numero_id">No. id</string>
    <string name="registro_txt_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="registro_txt_usuario">Nombre de Usuario</string>

    <string name="registro_txt_contrasena">Contraseña</string>
    <string name="registro_txt_verificacion_contrasena">Verificación de Contraseña</string>
    <string name="registro_txt_localidad">Localidad</string>
    <string-array name="Localidades">
        <item>Antonio Nariño</item>
        <item>Barrios Unidos</item>
        <item>Bosa</item>
        <item>Chapinero</item>
        <item>Ciudad Bolívar</item>
        <item>Engativá</item>
        <item>Fontibón</item>
        <item>Kennedy</item>
        <item>La Candelaria</item>
        <item>Los Mártires</item>
        <item>Puente Aranda</item>
        <item>Rafael Uribe Uribe</item>
        <item>San Cristóbal</item>
        <item>Santa Fe</item>
        <item>Suba</item>
        <item>Sumapaz</item>
        <item>Teusaquillo</item>
        <item>Tunjuelito</item>
        <item>Usaquén</item>
        <item>Usme</item>
    </string-array>
    <string-array name="LocalidadesIdentificador">
        <item>15</item>
        <item>12</item>
        <item>7</item>
        <item>2</item>
        <item>19</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>17</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>4</item>
        <item>3</item>
        <item>11</item>
        <item>20</item>
        <item>13</item>
        <item>6</item>
        <item>1</item>
        <item>5</item>
    </string-array>
    <string name="registro_txt_direccion">Dirección</string>
    <string name="registro_txt_pregunta">¿Cuál es su estado actual de salud referente al COVID-19?</string>
    <string-array name="Estado">
        <item>Activo</item>
        <item>Inactivo</item>
        <item>Sospechoso</item>
    </string-array>
    <string name="registro_txt_boton_registrar">Regístrate</string>

    <!-- Etiquetas para usuarios.erc_coivd.ERCInicio-->
    <string name="ercInicio_nombre">ERC-COVID (Entidad que Reporta Contactos Covid)</string>
    <string name="ercInicio_btn_notificar_cita">Notificar Cita</string>

    <!--Etiquetas para usuarios.erc_covid.ReporteNotificacion-->
    <string name="reporteNotificacion_txt_titulo">Notificación de Citas</string>
    <string name="reporteNotificacion_txt_filtro">Seleccione los síntomas para filtrar los usuarios:</string>
    <string name="reporteNotificacion_check_dif_respirar">Dificultad para Respirar</string>
    <string name="reporteNotificacion_check_fatiga">Fatiga</string>
    <string name="reporteNotificacion_check_fiebre">Fiebre</string>
    <string name="reporteNotificacion_check_tos">Tos</string>
    <string name="reporteNotificacion_check_dis_olfato_sabor">Disminución de Olfato y Sabor</string>
    <string name="reporteNotificacion_check_contacto">Contacto con Sospechoso</string>
    <string name="reporteNotificacion_btn_buscarUsuarios">Buscar Usuarios</string>
    <string name="reporteNotificacion_btn_enviar_correo_seleccionados">Enviar Correo Seleccionados</string>
    <string name="reporteNotificacion_btn_enviar_correo_masivo">Enviar Correo Masivo</string>

    <string name="reporteNotificacion_lbl_nombre"><b>Nombre:</b></string>
    <string name="reporteNotificacion_lbl_documento"><b>Documento:</b></string>
    <string name="reporteNotificacion_lbl_correo"><b>Correo:</b></string>
    <string name="reporteNotificacion_lbl_localidad"><b>Localidad:</b></string>

    <string name="reporteNotificacion_lbl_mensaje_buscar"><b>Tocar para Filtrar y Buscar</b></string>
    <string name="reporteNotificacion_lbl_mensaje_no_encotrado"><b>Usuarios no Encontrados</b></string>

    <!-- Etiquetas para usuarios.EREInicio-->
    <string name="ereInicio_nombre">ERE-COVID (Entidad que Reporta Examenes (Diagnosticos) Covid)</string>
    <!-- Etiquetas para usuarios.EREReporteZona-->
    <string name="reporteZona_lbl_activo">Activos</string>
    <string name="reporteZona_lbl_inActivo">Inactivos</string>
    <string name="reporteZona_lbl_solicitado">Solicitados</string>
    <string name="reporteZona_lbl_pendientes">Pendientes</string>
    <string name="reporteZona_lbl_examenNoTomado">Examen no Tomado</string>
    <string name="reporteZona_lbl_totalPersonas">Total de Personas</string>


    <string name="reporteZona_btn_estado_localidad">Actualizar Estado de Localidad</string>

    <!-- Etiquetas para usuarios.ETDAInicio-->
    <string name="etdaInicio_nombre">ETDA-COVID (Entidad que Toma las Decisiones de Aislamiento)</string>

    <!-- Etiquetas para usuario.persona.PersonaInicio -->
    <string name="persona_btn_ubicacion">Cancelar La Busqueda de Ubicación</string>
    <string name="persona_btn_mapa">Abrir Mapa</string>

    <!-- Etiquetas para usuarios.persona.Mapa -->
    <string name="access_token" translatable="false">pk.eyJ1IjoiYnJhbmRvbnJvZHJpZ3VleiIsImEiOiJjazkwZDh1MTUwMGpyM2hvMGo1a2p5bnQzIn0.T-GzUebrNkyoXWR7v9u4qQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="Error_Base_de_Datos">Hubo un error con la base de datos, por favor intenta mas tarde</string>
    <string name="Error_Nombre_de_Usuario">Lo sentimos, ese nombre de usuario ya está en uso</string>

    <!-- Etiquetas para usuario.persona.Sintomas -->
    <string name="sintomas_dificultadR">¿Le ha faltado el aire o ha tenido dificultad para respirar?</string>
    <string name="sintomas_fatiga">¿Se ha sentido últimamente más fatigado de lo usual?</string>
    <string name="sintomas_fiebre">¿Ha tenido fiebre o temperatura mayor a 38*C en los últimos dias?</string>
    <string name="sintomas_tos">¿Ha tenido tos en los últimos dias?</string>
    <string name="sintomas_sentidos">¿Ha notado disminución del olfato o del sabor de los alimentos?</string>
    <string name="sintomas_cercania">¿Ha estado en contacto con alguien diagnosticado o sospechoso de covid-19 en los últimos días?</string>
    <string name="button">Enviar síntomas</string>
    <string name="capital" />
    <string name="tap_on_marker_instruction" />
    <string-array name="si_no">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <!-- Etiquetas para Reporte Resultados -->
    <string name="reporte_resultados_cedula">Documento de Identidad:</string>
    <string name="reporte_resultados_cedula_numero">Numero</string>
    <string name="reporte_resultados_resultados">Resultado Examen COVID-19:</string>
    <string name="reporte_resultados_enviar">Enviar</string>
    <string name="reporte_envio_de_resultados">Envio y Actualización de Resultados</string>
    <string-array name="resultado_examen">
        <item>Activo</item>
        <item>Inactivo</item>
        <item>Solicitado</item>
        <item>Pendiente</item>
        <item>Examen no tomado</item>
    </string-array>
    <string name="reporte_zona_btn_mostrar_reporte_resultados">Reportar Resultado</string>


    <string name="button_aislamiento">Consultar movimiento de pacientes con aislamiento</string>

</resources>