<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Ingreso">


        <TextView
            android:id="@+id/textView"
            android:layout_width="304dp"
            android:layout_height="91dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/main_txt_bienvenido"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/txt_usuario"
            android:layout_width="311dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:autofillHints="email"
            android:ems="10"
            android:hint="@string/main_txt_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/txt_contrasena"
            android:layout_width="311dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/main_txt_contrasena_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/main_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_tipo_usuario" />

        <Spinner
            android:id="@+id/sp_tipo_usuario"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_contrasena" />

        <TextView
            android:id="@+id/lbl_registrar"
            android:layout_width="137dp"
            android:layout_height="26dp"
            android:layout_marginTop="28dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/main_lbl_registro"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ingresar" />

        <TextView
            android:id="@+id/lbl_cambioContrasena"
            android:layout_width="137dp"
            android:layout_height="26dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/main_lbl_cambio_contrasena"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_registrar"
            app:layout_constraintVertical_bias="0.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>