<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Ingreso">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="304dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/registro_lbl_registrate"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_txt_nombre"
            android:inputType="textPersonName"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_txt_apellido"
            android:inputType="textPersonName"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/main_txt_email_hint"
            android:inputType="textEmailAddress"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/registro_txt_numero_id"
            android:inputType="number"
            android:textAllCaps="true"
            android:textColorHint="?android:attr/textColorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.303"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextDate6"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/registro_txt_fecha_nacimiento"
            android:inputType="date"
            android:textAllCaps="true"
            android:textColorHint="?android:attr/textColorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>