<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cns_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".usuarios.erc_covid.ReporteNotificarCita">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_filtro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="15"
                    android:gravity="center"
                    android:text="@string/reporteNotificacion_txt_filtro"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <CheckBox
                    android:id="@+id/ch_contacto_sospechoso"
                    android:layout_width="180dp"
                    android:layout_height="56dp"
                    android:text="@string/reporteNotificacion_check_contacto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.127"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0" />

                <CheckBox
                    android:id="@+id/ch_fiebre"
                    android:layout_width="115dp"
                    android:layout_height="56dp"
                    android:text="@string/reporteNotificacion_check_fiebre"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.471"
                    app:layout_constraintStart_toEndOf="@+id/ch_contacto_sospechoso"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0" />

                <CheckBox
                    android:id="@+id/ch_dif_respirar"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:text="@string/reporteNotificacion_check_dif_respirar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.127"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ch_contacto_sospechoso"
                    app:layout_constraintVertical_bias="0.0" />

                <CheckBox
                    android:id="@+id/ch_fatiga"
                    android:layout_width="115dp"
                    android:layout_height="45dp"
                    android:text="@string/reporteNotificacion_check_fatiga"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.471"
                    app:layout_constraintStart_toEndOf="@+id/ch_dif_respirar"
                    app:layout_constraintTop_toBottomOf="@+id/ch_fiebre"
                    app:layout_constraintVertical_bias="0.0" />

                <CheckBox
                    android:id="@+id/ch_dis_olfato_sabor"
                    android:layout_width="180dp"
                    android:layout_height="56dp"
                    android:text="@string/reporteNotificacion_check_dis_olfato_sabor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.129"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ch_dif_respirar"
                    app:layout_constraintVertical_bias="0.0" />

                <CheckBox
                    android:id="@+id/ch_tos"
                    android:layout_width="115dp"
                    android:layout_height="56dp"
                    android:text="@string/reporteNotificacion_check_tos"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.471"
                    app:layout_constraintStart_toEndOf="@+id/ch_dis_olfato_sabor"
                    app:layout_constraintTop_toBottomOf="@+id/ch_fatiga"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:text="Seleccione la fecha de examen:"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ch_dis_olfato_sabor"
                    app:layout_constraintVertical_bias="0.098" />

                <EditText
                    android:id="@+id/txt_fecha_cita"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btn_buscar_usuarios"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/reporteNotificacion_btn_buscarUsuarios"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_fecha_cita"
                    app:layout_constraintVertical_bias="0.078" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_usuarios"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="3dp"
            android:layout_margin="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_filtro"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_enviar_masivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/reporteNotificacion_btn_enviar_correo_masivo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_usuarios"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>