<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".usuarios.persona.Mapa"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="gone"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/menu" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".usuario.ere_covid.ReportarResultados"
            >
     <EditText
        android:id="@+id/tf_reporte_resultados_Cedula"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/reporte_resultados_cedula"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/lbl_reporte_resultados_Titulo"
        app:layout_constraintTop_toBottomOf="@+id/lbl_reporte_resultados_Cedula" />

    <TextView
        android:id="@+id/lbl_reporte_resultados_Cedula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reporte_resultados_cedula"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_reporte_resultados_Titulo"
        app:layout_constraintTop_toBottomOf="@+id/lbl_reporte_resultados_Titulo" />

    <TextView
        android:id="@+id/lbl_reporte_resultados_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/reporte_envio_de_resultados"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reporte_resultados_Envio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/reporte_resultados_enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_reporte_resultados_Resultado" />

    <Spinner
        android:id="@+id/spn_reporte_resultados_Resultado"
        android:layout_width="317dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:entries="@array/resultado_examen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_reporte_resultados_Resultado" />

    <TextView
        android:id="@+id/lbl_reporte_resultados_Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reporte_resultados_resultados"
        app:layout_constraintStart_toStartOf="@+id/lbl_reporte_resultados_Cedula"
        app:layout_constraintTop_toBottomOf="@+id/tf_reporte_resultados_Cedula" />

    <Spinner
        android:id="@+id/spn_reporte_resultados_TipoID"
        android:layout_width="93dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:entries="@array/Cedula"
        app:layout_constraintEnd_toStartOf="@+id/tf_reporte_resultados_Cedula"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lbl_reporte_resultados_Cedula"
        app:layout_constraintTop_toBottomOf="@+id/lbl_reporte_resultados_Cedula" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>